# riglr

./: .env.example  .env.test  .gitignore  .tarpaulin.toml  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  EXTERNAL_REQUIREMENTS.md  LICENSE  PUBLISHING.md  README.md  chains.toml  coverage.sh  deny.toml  docker-compose.test.yml  lcov.info  lib.rs  plan.md  sonar-project.properties  tarpaulin-report.json
create-riglr-app/: .env.example  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo-generate.toml  post-script.rhai  pre-script.rhai
create-riglr-app/src/: config.rs  dependencies.rs  generator.rs  lib.rs  main.rs  templates.rs  validation.rs
create-riglr-app/templates/: README.md.hbs
create-riglr-app/tests/: e2e_scaffolding.rs
riglr-agents/: Cargo.toml  README.md  compile_test  compile_test.rs  run_tests.sh
riglr-agents/benches/: adapter_benchmark.rs  agent_benchmarks.rs  redis_queue_benchmark.rs
riglr-agents/docs/: redis-queue-scalability-report.md
riglr-agents/examples/: basic_agents.rs  basic_dispatcher.rs  live_fire_demo.rs  risk_management_system.rs  simple_dispatcher.rs  trading_swarm.rs
riglr-agents/src/: adapter.rs  builder.rs  capabilities.rs  error.rs  integration.rs  lib.rs  toolset.rs  types.rs  util.rs
riglr-agents/tests/: README.md  debuggable_completion_model_test.rs  e2e_core_agent_workflow.rs  e2e_multi_agent_coordination.rs  edge_case_tests.rs  lib.rs  property_tests.rs  security_tests.rs  signer_context_propagation.rs
riglr-auth/: Cargo.toml  README.md
riglr-auth/examples/: multi_provider.rs  privy_auth.rs
riglr-auth/src/: config.rs  error.rs  lib.rs  provider.rs
riglr-auth/tests/: integration_tests.rs
riglr-config/: CHANGELOG.md  Cargo.toml  README.md  chains.toml.example
riglr-config/src/: app.rs  builder.rs  database.rs  environment.rs  error.rs  features.rs  lib.rs  network.rs  providers.rs  test_helpers.rs  validation.rs
riglr-core/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
riglr-core/benches/: core_benchmarks.rs
riglr-core/examples/: basic_worker.rs  error_handling.rs  granular_signers.rs  multi_tenant.rs  rate_limiting_strategies.rs  service_worker.rs
riglr-core/src/: config.rs  error.rs  idempotency.rs  jobs.rs  lib.rs  provider.rs  provider_extensions.rs  queue.rs  retry.rs  sentiment.rs  signer.rs  spawn.rs  tool.rs  util.rs
riglr-core/tests/: README.md  arc_client_error_tests.rs  arc_error_cloning_test.rs  arc_function_compatibility_tests.rs  arc_integration_tests.rs  arc_solana_tools_integration_tests.rs  arc_thread_safety_tests.rs  chain_agnostic_integration.rs  core_integration.rs  coverage_tests.rs  error_conversion_tests.rs  error_tests.rs  idempotency_tests.rs  integration_test.rs  jobs_tests.rs  queue_tests.rs  redis_integration.rs  redis_integration_tests.rs  tool_tests.rs
riglr-cross-chain-tools/: Cargo.toml  README.md
riglr-cross-chain-tools/examples/: cross_chain_swap.rs
riglr-cross-chain-tools/src/: bridge.rs  error.rs  lib.rs  lifi.rs
riglr-cross-chain-tools/tests/: bridge_integration.rs  error_conversion_tests.rs
riglr-events-core/: Cargo.toml  README.md
riglr-events-core/benches/: event_benchmarks.rs
riglr-events-core/src/: error.rs  lib.rs  parser.rs  traits.rs  types.rs  utils.rs
riglr-evm-common/: CHANGELOG.md  Cargo.toml  README.md
riglr-evm-common/benches/: decimal_conversion_bench.rs
riglr-evm-common/src/: address.rs  chain.rs  conversion.rs  error.rs  formatting.rs  lib.rs  types.rs  validation.rs
riglr-evm-common/tests/: decimal_precision_comparison.rs  performance_comparison.rs
riglr-evm-tools/: CHANGELOG.md  Cargo.toml  README.md
riglr-evm-tools/benches/: evm_benchmarks.rs
riglr-evm-tools/examples/: balance_checker.rs  evm_balance_checker.rs  evm_balance_checker_injected.rs  evm_transfer.rs  simple_import_test.rs  test_new_imports.rs  uniswap_swap.rs  uniswap_trader.rs
riglr-evm-tools/src/: balance.rs  client.rs  contract.rs  error.rs  lib.rs  network.rs  provider.rs  signer.rs  swap.rs  transaction.rs  util.rs
riglr-evm-tools/tests/: architectural_validation_tests.rs  balance_tests.rs  client_connectivity_tests.rs  client_tests.rs  contract_tests.rs  error_conversion_tests.rs  error_tests.rs  evm_integration.rs  evm_node_integration.rs  network_tests.rs  refactoring_validation.rs  simple_connectivity_test.rs  swap_tests.rs  thread_safety_tests.rs  transaction_tests.rs
riglr-graph-memory/: Cargo.toml  README.md
riglr-graph-memory/benches/: graph_benchmarks.rs
riglr-graph-memory/examples/: rag_agent.rs  rig_agent_memory.rs
riglr-graph-memory/src/: client.rs  document.rs  error.rs  extractor.rs  graph.rs  lib.rs  network.rs  rig_vector_store.rs  swap.rs  transaction.rs  vector_store.rs
riglr-graph-memory/src.backup/: balance.rs  client.rs  extractor.rs  vector_store.rs
riglr-graph-memory/tests/: client_tests.rs  document_tests.rs  e2e_agent_memory.rs  error_tests.rs  extractor_tests.rs  graph_tests.rs  integration_tests.rs  placeholder_tests.rs  rig_integration_tests.rs  vector_store_tests.rs
riglr-hyperliquid-tools/: Cargo.toml  README.md
riglr-hyperliquid-tools/examples/: perpetual_trading.rs
riglr-hyperliquid-tools/src/: client.rs  error.rs  lib.rs  positions.rs  trading.rs
riglr-hyperliquid-tools/tests/: error_conversion_tests.rs
riglr-indexer/: Cargo.toml  README.md
riglr-indexer/config/: docker.toml  indexer.toml
riglr-indexer/migrations/: 001_initial_schema.sql
riglr-indexer/src/: error.rs  lib.rs  main.rs
riglr-macros/: CHANGELOG.md  Cargo.toml  README.md
riglr-macros/src/: lib.rs
riglr-macros/tests/: compile_tests.rs  comprehensive_tests.rs  lib_tests.rs  (+7 more)
riglr-server/: CONFIG.md  Cargo.toml  README.md
riglr-showcase/: Cargo.toml  README.md
riglr-solana-common/: Cargo.toml
riglr-solana-events/: ARCHITECTURE_NOTES.md  Cargo.toml  README.md
riglr-solana-tools/: CHANGELOG.md  Cargo.toml  README.md  TEST_REPORT.md
riglr-streams/: Cargo.toml  README.md  config.example.toml
riglr-web-adapters/: Cargo.toml  README.md
riglr-web-tools/: Cargo.toml  README.md
(+590 files in other folders)
