[workspace]
members = [
    "riglr-core",
    "riglr-config",
    "riglr-macros",
    "riglr-solana-tools",
    "riglr-evm-tools",
    "riglr-web-tools",
    "riglr-graph-memory",
    "riglr-web-adapters",
    "riglr-auth",
    "riglr-server",
    "riglr-showcase",
    "riglr-hyperliquid-tools",
    "riglr-cross-chain-tools",
    "create-riglr-app",
    "riglr-streams",
    "riglr-solana-events",
    "riglr-events-core",
    "riglr-indexer",
    "riglr-agents"
, "riglr-evm-common"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["riglr project contributors"]
repository = "https://github.com/riglr/riglr"
homepage = "https://github.com/riglr/riglr"

[workspace.dependencies]
# Core riglr and rig dependencies
rig-core = "0.17.1"
riglr-core = { path = "riglr-core" }
riglr-config = { path = "riglr-config" }
riglr-macros = { path = "riglr-macros" }
riglr-solana-tools = { path = "riglr-solana-tools" }
riglr-evm-tools = { path = "riglr-evm-tools" }
riglr-evm-common = { path = "riglr-evm-common" }
riglr-web-tools = { path = "riglr-web-tools" }
riglr-graph-memory = { path = "riglr-graph-memory" }
riglr-web-adapters = { path = "riglr-web-adapters" }
riglr-auth = { path = "riglr-auth" }
riglr-events-core = { path = "riglr-events-core" }
riglr-solana-events = { path = "riglr-solana-events" }
riglr-streams = { path = "riglr-streams" }
riglr-indexer = { path = "riglr-indexer" }
riglr-agents = { path = "riglr-agents" }
riglr-showcase = { path = "riglr-showcase" }

# Async and concurrency
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0.16"

# Serialization and schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
schemars = "1.0.4"
toml = "0.9.5"

# Environment
dotenv = "0.15"
envy = "0.4"
once_cell = "1.19"
rand = "0.9.2"

# Database and caching
redis = { version = "0.32.4", features = ["tokio-comp"] }

# HTTP client
reqwest = { version = "0.12.23", features = ["json"] }
url = "2.5.6"

# Streaming
tokio-stream = "0.1"

# UUID generation
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# Collections
indexmap = "2.11.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Proc macro dependencies
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.101"

# Testing
tokio-test = "0.4"
trybuild = "1.0"
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }

# CLI and config
clap = { version = "4.5.43", features = ["derive"] }
dotenvy = "0.15"

# Neo4j (commented out as it may not be available)
# neo4rs = "0.7"

# Solana dependencies
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-transaction-status = "3.0.0"
solana-message = "3.0.0"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = "2.0.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

# EVM dependencies (using alloy-rs)
alloy = { version = "1.0.25", features = ["full", "node-bindings"] }

# Retry logic
tokio-retry = "0.3"

# Additional HTTP/networking
hyper = "1.7.0"
tower = "0.5.2"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Config and environment
config = "0.15.13"
humantime-serde = "1.1"
num_cpus = "1.16"

[workspace.lints.rust]
missing_docs = "warn"
