[workspace]
members = [
    "riglr-core",
    "riglr-config",
    "riglr-macros",
    "riglr-auth",
    "riglr-events-core",
    "riglr-solana-events",
    "riglr-solana-tools",
    "riglr-evm-common",
    "riglr-evm-tools",
    "riglr-web-tools",
    "riglr-web-adapters",
    "riglr-graph-memory",
    "riglr-streams",
    "riglr-indexer",
    "riglr-agents",
    "riglr-hyperliquid-tools",
    "riglr-cross-chain-tools",
    "riglr-server",
    "riglr-showcase"
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["riglr project contributors"]
repository = "https://github.com/riglr/riglr"
homepage = "https://github.com/riglr/riglr"

[workspace.dependencies]
# Core riglr and rig dependencies
rig-core = "0.19.0"
riglr-core = { path = "riglr-core" }
riglr-config = { path = "riglr-config" }
riglr-macros = { path = "riglr-macros" }
riglr-solana-tools = { path = "riglr-solana-tools" }
riglr-evm-tools = { path = "riglr-evm-tools" }
riglr-evm-common = { path = "riglr-evm-common" }
riglr-web-tools = { path = "riglr-web-tools" }
riglr-graph-memory = { path = "riglr-graph-memory" }
riglr-web-adapters = { path = "riglr-web-adapters" }
riglr-events-core = { path = "riglr-events-core" }
riglr-solana-events = { path = "riglr-solana-events" }
riglr-streams = { path = "riglr-streams" }
riglr-agents = { path = "riglr-agents" }
riglr-hyperliquid-tools = { path = "riglr-hyperliquid-tools" }
riglr-cross-chain-tools = { path = "riglr-cross-chain-tools" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Blockchain specific
solana-sdk = "2.0"
solana-client = "2.0"
solana-transaction-status = "2.0"
solana-message = "2.0"
solana-system-interface = "2.0"
solana-commitment-config = "2.0"
solana-compute-budget-interface = "2.0"
spl-token = "7.0"
spl-associated-token-account = "6.0"
alloy = { version = "0.9", features = ["dyn-abi", "json-abi", "rpc", "rpc-types", "providers", "network", "signers", "signer-local", "sol-types", "transport-http"] }

# HTTP clients
reqwest = { version = "0.12", features = ["json"] }

# Database and caching
redis = { version = "0.27", features = ["tokio-comp", "json"] }
tokio-test = "0.4"
criterion = "0.5"

# Utilities
rand = "0.9.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
dotenv = "0.15"
dotenvy = "0.15"
envy = "0.4"
toml = "0.9"
url = "2.5"
tokio-retry = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tower = "0.5"
hyper = "1.7"
clap = { version = "4", features = ["derive"] }
trybuild = "1.0"
config = "0.14"
humantime-serde = "1.1"
num_cpus = "1.16"
tokio-stream = "0.1"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused_extern_crates = "warn"
missing_debug_implementations = "warn"
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
default_trait_access = "allow"
similar_names = "allow"
future_not_send = "allow"
cast_possible_truncation = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"
single_match_else = "allow"
multiple_crate_versions = "allow"
