[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{author-name}} <{{author-email}}>"]
description = "{{description}}"
license = "MIT"
readme = "README.md"

[dependencies]
# Core riglr framework - always included
rig-core = "0.17.1"
riglr-core = "0.1.0"
riglr-macros = "0.1.0"

{% if include-solana-tools or blockchain-selection == "solana-only" or blockchain-selection == "multi-chain-basic" or blockchain-selection == "multi-chain-advanced" -%}
# Solana blockchain tools
riglr-solana-tools = "0.1.0"
{% endif %}

{% if include-evm-tools or blockchain-selection == "ethereum-only" or blockchain-selection == "multi-chain-basic" or blockchain-selection == "multi-chain-advanced" -%}
# Ethereum/EVM blockchain tools
riglr-evm-tools = "0.1.0"
{% endif %}

{% if include-web-tools or tool-bundle == "analytics-focused" or tool-bundle == "complete" -%}
# Web data tools (Twitter, DexScreener, news, web search)
riglr-web-tools = "0.1.0"
{% endif %}

{% if include-graph-memory or tool-bundle == "analytics-focused" or tool-bundle == "complete" -%}
# Graph-based knowledge storage and RAG capabilities
riglr-graph-memory = "0.1.0"
{% endif %}

{% if include-cross-chain-tools or blockchain-selection == "multi-chain-advanced" or tool-bundle == "cross-chain" or tool-bundle == "complete" -%}
# Cross-chain bridge and swap tools
riglr-cross-chain-tools = "0.1.0"
{% endif %}

{% if include-hyperliquid-tools or tool-bundle == "complete" -%}
# Hyperliquid derivatives trading tools
riglr-hyperliquid-tools = "0.1.0"
{% endif %}

{% if include-server -%}
# Web adapters for serving agents over HTTP
riglr-web-adapters = "0.1.0"
actix-web = "4.0"
actix-web-lab = "0.20"
{% endif %}

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
config = "0.15.13"
envy = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Database/caching (optional but commonly needed)
redis = { version = "0.32.4", features = ["tokio-comp"] }

# HTTP client for API interactions
reqwest = { version = "0.12.22", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regular expressions for parsing
regex = "1.10"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

# Example binaries for different agent types
{% if agent-type == "trading-bot" -%}
[[bin]]
name = "trading-bot"
path = "src/bin/trading_bot.rs"
{% endif %}

{% if agent-type == "market-analyst" -%}
[[bin]]
name = "market-analyst"
path = "src/bin/market_analyst.rs"
{% endif %}

{% if agent-type == "news-monitor" -%}
[[bin]]
name = "news-monitor"
path = "src/bin/news_monitor.rs"
{% endif %}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"