[package]
name = "riglr-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-agent coordination system for riglr blockchain automation"
keywords = ["blockchain", "agent", "coordination", "distributed", "riglr"]
categories = ["algorithms", "development-tools", "network-programming", "web-programming"]

[lints]
workspace = true

[dependencies]
# Core riglr dependencies
riglr-core = { workspace = true }
rig-core = { workspace = true }

# Async and concurrency
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }

# Utility
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# Async utilities
futures = { workspace = true }

# Collections
indexmap = "2.0"
dashmap = "6.1"

# For EVM integration testing
alloy = { workspace = true }

# For Solana integration testing
solana-client = { workspace = true }

# Dependencies for blockchain testing
riglr-solana-tools = { workspace = true, optional = true }
riglr-evm-tools = { workspace = true, optional = true }

# Redis for distributed registry
redis = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.9.2"
hex = "0.4"
solana-sdk = { workspace = true }
bs58 = "0.5"
tracing-subscriber = { workspace = true }
rig-core = { workspace = true }
riglr-config = { workspace = true }
dotenv = "0.15"
dotenvy = "0.15"
bincode = "1.3.3"

# Additional dependencies for blockchain testing
tempfile = "3.8"
portpicker = "0.1"
spl-token = { workspace = true }
solana-system-interface = { workspace = true }
solana-commitment-config = { workspace = true }

# Testcontainers for integration tests
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["redis"] }


[[bench]]
name = "adapter_benchmark"
harness = false

[[bench]]
name = "redis_queue_benchmark"
harness = false
required-features = ["redis"]

[features]
default = ["redis", "solana-tools"]
redis = ["dep:redis", "riglr-core/redis"]
solana-tools = ["dep:riglr-solana-tools"]

# Test-specific features
test-utils = []
blockchain-tests = ["test-utils", "riglr-evm-tools", "solana-tools"]
performance-tests = ["test-utils"]
e2e-tests = []

