[package]
name = "riglr-config"
version = "0.1.0"
edition = "2021"
authors = ["RIGLR Contributors"]
description = "Unified configuration management for RIGLR applications"
repository = "https://github.com/riglr/riglr"
license = "MIT OR Apache-2.0"
keywords = ["configuration", "blockchain", "environment", "validation"]
categories = ["config", "development-tools"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }

# Optional dependencies for specific integrations
riglr-core = { path = "../riglr-core", optional = true }

[features]
default = ["network-defaults"]
network-defaults = []
core-integration = ["riglr-core"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"