[package]
name = "riglr-config"
version = "0.3.0"
edition = "2021"
authors = ["RIGLR Contributors"]
description = "Unified configuration management for RIGLR applications"
repository = "https://github.com/riglr/riglr"
license = "MIT OR Apache-2.0"
keywords = ["configuration", "blockchain", "environment", "validation"]
categories = ["config", "development-tools"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
validator = { version = "0.20", features = ["derive"] }
lazy_static = "1.4"
regex = "1.0"
once_cell = { workspace = true }

[features]
default = ["network-defaults"]
network-defaults = []

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"
serial_test = "3.0"