[package]
name = "riglr-core"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Core abstractions and job execution engine for riglr - building resilient AI agents."
repository = "https://github.com/riglr/riglr"
readme = "README.md"
keywords = ["rig", "ai", "agent", "job-queue", "blockchain"]
categories = ["asynchronous", "web-programming::api-bindings"]
documentation = "https://docs.rs/riglr-core"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }

# Configuration
riglr-config = { path = "../riglr-config" }

# Retry utilities
rand = { workspace = true }

# Queue backends
redis = { workspace = true, optional = true }

# Retry logic
tokio-retry = { workspace = true }

# Exponential backoff
backoff = "0.4"

# Concurrent hashmap for better performance
dashmap = "6.1"

# Directory utilities for secure key loading
dirs = "5.0"

# Temporary files for testing
tempfile = { version = "3.8", optional = true }

# HTTP client for general use
reqwest = { workspace = true }
bincode = "1.3"

# For testing
[dev-dependencies]
riglr-config = { path = "../riglr-config" }
riglr-solana-tools = { path = "../riglr-solana-tools" }
riglr-evm-tools = { path = "../riglr-evm-tools" }
tokio-test = { workspace = true }
criterion = { workspace = true }
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.12.1", features = ["redis"] }
mockito = "1.0"
proptest = "1.0"
futures = "0.3"
chrono = "0.4"
tracing-subscriber = { workspace = true }
tempfile = "3.8"


[features]
default = ["redis"]
redis = ["dep:redis"]
integration-tests = []