[package]
name = "riglr-cross-chain-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cross-chain tools for riglr - bridge tokens across different blockchain networks using LiFi"
keywords = ["blockchain", "cross-chain", "bridge", "defi", "ai"]
categories = ["web-programming", "api-bindings"]

[lints]
workspace = true

[dependencies]
riglr-config = { workspace = true }
riglr-core = { workspace = true }
riglr-macros = { workspace = true }
riglr-evm-tools = { workspace = true }
rig-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# For JSON schema generation and validation
schemars = { workspace = true }

# Hex encoding/decoding
hex = "0.4"

# Blockchain dependencies for TransactionSigner trait  
solana-sdk = { workspace = true }
solana-client = { workspace = true }
alloy = { workspace = true }

[features]
default = []
rig = []

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }