[package]
name = "riglr-evm-tools"
version = "0.3.0"
edition = "2021"
authors = ["Riglr Contributors"]
license = "MIT OR Apache-2.0"
description = "EVM blockchain tools for the Riglr framework"
repository = "https://github.com/riglr/riglr"
keywords = ["evm", "ethereum", "blockchain", "web3", "tools"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
# Core dependencies
riglr-config = { path = "../riglr-config" }
riglr-core = { path = "../riglr-core" }
riglr-evm-common = { path = "../riglr-evm-common" }
riglr-macros = { path = "../riglr-macros" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Ethereum/EVM
alloy = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
testcontainers = "0.25.0"

[features]
integration-tests = []
